# glue-genomics-data

./: CHANGES.md  README.md  setup.cfg
glue_genomics_data/: __init__.py  bed_factory.py  bedgraph_factory.py  bedpe_factory.py  bigwig_factory.py  gnome3d_factory.py  hic_factory.py  matrix_factory.py  peak_correlations_factory.py
glue_genomics_data/tests/: test_bedpe.py  test_hic.py
glue_genomics_data/tests/data/: test.bedpe
glue_genomics_data/viewers/network/: data_viewer.py  layer_artist.py  layer_state.py  viewer_state.py
