[metadata]
name = glue-genomics-data
url = https://www.gluesolutions.io
author = glue solutions inc.
author_email = jfoster@gluesolutions.io
classifiers = 
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: BSD License
description = Custom data loaders for genomics data in glue
long_description = file: README.md


[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires = 
	glue-core@git+https://github.com/gluesolutions/glue.git
	hic-straw==0.0.6 #Ideally we would relax this
	pyranges
	astropy
	strawC
	openpyxl
	mplcursors@git+https://github.com/anntzer/mplcursors.git

[options.entry_points]
glue.plugins=
	glue_genomics_data=glue_genomics_data:setup

[flake8]
max-line-length = 99
