[metadata]
name = glue-genomics-data
url = https://www.gluesolutions.io
author = glue solutions inc.
author_email = jfoster@gluesolutions.io
classifiers = 
	Intended Audience :: Science/Research
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Visualization
	License :: OSI Approved :: BSD License
description = Custom data loaders for genomics data in glue
long_description = file: README.md


[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires = 
	glue-core@git+https://github.com/gluesolutions/glue.git
	pyranges
	astropy
	openpyxl
	networkx>=2.6.3
	numpy-stl

[options.entry_points]
glue.plugins=
	glue_genomics_data=glue_genomics_data:setup

[options.extras_require]
qt =
	PyQt5>=5.9
test =
	pytest
	pytest-cov
	pytest-faulthandler
	objgraph

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot

[flake8]
ignore = E501,E731,F841,E127,E741,E402,W504,W605

[tool:pytest]
addopts=-p no:logging
flake8-ignore = E501,E731,F841,E127,E741,E402,W504,W605
filterwarnings =
	ignore::PendingDeprecationWarning:xlrd
	ignore:Session._key_changed is deprecated
	ignore:zmq.* is deprecated
	ignore:can't be aliased because it is another magic command
	ignore:DragAndDropTerminal._style_sheet_changed is deprecated
	ignore:::ipykernel
	ignore:Accessing zmq Socket attribute
	ignore:'U' mode is deprecated:DeprecationWarning:PyQt5

